--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,5 +54,5 @@
   "devDependencies": {
     "@redux-devtools/extension": "^3.2.5"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "https://jobportal-2ruz.onrender.com"
 }
